KSCM-2537 - Return to Previous - The submit button in the Return to Previous node popup is too big - Fixed the button disabling issue in a different manner (showing error message instead due to technical difficulties) for approve and blanket approve
git-svn-id: https://svn.kuali.org/repos/student/enrollment/ks-core/trunk@73810 0ac02d80-fb3f-11dc-a574-c57244a850eb

--- a/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
+++ b/ks-common/ks-common-web/src/main/webapp/themes/ksboot/stylesheets/cm.less
@@ -835,6 +835,10 @@ fieldset .uif-actionLink{
   width: 530px;
 }
 
+#CM-BlanketApprove-Dialog-Explanation, #CM-Approve-Dialog-Explanation {
+  float: left;
+}
+
 .viewcourseview-header-status {
   padding-top: 20px !important; /* Override the padding-top set by .ks-unified-header-rightGroup-container */
 }
